// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`progressive error messages > throws parser errors 1`] = `[Error: Failed to parse expression]`;

exports[`valid expressions > parses !!false 1`] = `
{
  "expression": {
    "expression": {
      "location": SourceRegion {
        "column": 3,
        "endColumn": 8,
        "endLine": 1,
        "extent": 5,
        "line": 1,
        "offset": 2,
        "source": "!!false",
      },
      "type": "value",
      "value": {
        "type": "constant",
        "value": {
          "type": "boolean",
          "value": "false",
        },
      },
    },
    "location": SourceRegion {
      "column": 2,
      "endColumn": 8,
      "endLine": 1,
      "extent": 6,
      "line": 1,
      "offset": 1,
      "source": "!!false",
    },
    "operator": "not",
    "type": "unary",
  },
  "location": SourceRegion {
    "column": 1,
    "endColumn": 8,
    "endLine": 1,
    "extent": 7,
    "line": 1,
    "offset": 0,
    "source": "!!false",
  },
  "operator": "not",
  "type": "unary",
}
`;

exports[`valid expressions > parses !false 1`] = `
{
  "expression": {
    "location": SourceRegion {
      "column": 2,
      "endColumn": 7,
      "endLine": 1,
      "extent": 5,
      "line": 1,
      "offset": 1,
      "source": "!false",
    },
    "type": "value",
    "value": {
      "type": "constant",
      "value": {
        "type": "boolean",
        "value": "false",
      },
    },
  },
  "location": SourceRegion {
    "column": 1,
    "endColumn": 7,
    "endLine": 1,
    "extent": 6,
    "line": 1,
    "offset": 0,
    "source": "!false",
  },
  "operator": "not",
  "type": "unary",
}
`;

exports[`valid expressions > parses #11/06/2000# 1`] = `
{
  "location": SourceRegion {
    "column": 1,
    "endColumn": 13,
    "endLine": 1,
    "extent": 12,
    "line": 1,
    "offset": 0,
    "source": "#11/06/2000#",
  },
  "type": "value",
  "value": {
    "type": "constant",
    "value": {
      "type": "date",
      "value": "11/06/2000",
    },
  },
}
`;

exports[`valid expressions > parses () 1`] = `
{
  "location": SourceRegion {
    "column": 1,
    "endColumn": 3,
    "endLine": 1,
    "extent": 2,
    "line": 1,
    "offset": 0,
    "source": "()",
  },
  "type": "value",
  "value": {
    "items": [],
    "type": "list",
  },
}
`;

exports[`valid expressions > parses (1,) 1`] = `
{
  "location": SourceRegion {
    "column": 1,
    "endColumn": 5,
    "endLine": 1,
    "extent": 4,
    "line": 1,
    "offset": 0,
    "source": "(1,)",
  },
  "type": "value",
  "value": {
    "items": [
      {
        "location": SourceRegion {
          "column": 2,
          "endColumn": 3,
          "endLine": 1,
          "extent": 1,
          "line": 1,
          "offset": 1,
          "source": "(1,)",
        },
        "type": "value",
        "value": {
          "type": "constant",
          "value": {
            "type": "number",
            "value": "1",
          },
        },
      },
    ],
    "type": "list",
  },
}
`;

exports[`valid expressions > parses (1,2) 1`] = `
{
  "location": SourceRegion {
    "column": 1,
    "endColumn": 6,
    "endLine": 1,
    "extent": 5,
    "line": 1,
    "offset": 0,
    "source": "(1,2)",
  },
  "type": "value",
  "value": {
    "items": [
      {
        "location": SourceRegion {
          "column": 2,
          "endColumn": 3,
          "endLine": 1,
          "extent": 1,
          "line": 1,
          "offset": 1,
          "source": "(1,2)",
        },
        "type": "value",
        "value": {
          "type": "constant",
          "value": {
            "type": "number",
            "value": "1",
          },
        },
      },
      {
        "location": SourceRegion {
          "column": 4,
          "endColumn": 5,
          "endLine": 1,
          "extent": 1,
          "line": 1,
          "offset": 3,
          "source": "(1,2)",
        },
        "type": "value",
        "value": {
          "type": "constant",
          "value": {
            "type": "number",
            "value": "2",
          },
        },
      },
    ],
    "type": "list",
  },
}
`;

exports[`valid expressions > parses [1] < #11/06/2000# 1`] = `
{
  "left": {
    "location": SourceRegion {
      "column": 1,
      "endColumn": 4,
      "endLine": 1,
      "extent": 3,
      "line": 1,
      "offset": 0,
      "source": "[1] < #11/06/2000#",
    },
    "type": "value",
    "value": {
      "name": "1",
      "type": "parameter",
    },
  },
  "location": SourceRegion {
    "column": 1,
    "endColumn": 19,
    "endLine": 1,
    "extent": 18,
    "line": 1,
    "offset": 0,
    "source": "[1] < #11/06/2000#",
  },
  "operator": "less-than",
  "right": {
    "location": SourceRegion {
      "column": 7,
      "endColumn": 19,
      "endLine": 1,
      "extent": 12,
      "line": 1,
      "offset": 6,
      "source": "[1] < #11/06/2000#",
    },
    "type": "value",
    "value": {
      "type": "constant",
      "value": {
        "type": "date",
        "value": "11/06/2000",
      },
    },
  },
  "type": "binary",
}
`;

exports[`valid expressions > parses ~~~~1 1`] = `
{
  "expression": {
    "expression": {
      "expression": {
        "expression": {
          "location": SourceRegion {
            "column": 5,
            "endColumn": 6,
            "endLine": 1,
            "extent": 1,
            "line": 1,
            "offset": 4,
            "source": "~~~~1",
          },
          "type": "value",
          "value": {
            "type": "constant",
            "value": {
              "type": "number",
              "value": "1",
            },
          },
        },
        "location": SourceRegion {
          "column": 4,
          "endColumn": 6,
          "endLine": 1,
          "extent": 2,
          "line": 1,
          "offset": 3,
          "source": "~~~~1",
        },
        "operator": "bit-complement",
        "type": "unary",
      },
      "location": SourceRegion {
        "column": 3,
        "endColumn": 6,
        "endLine": 1,
        "extent": 3,
        "line": 1,
        "offset": 2,
        "source": "~~~~1",
      },
      "operator": "bit-complement",
      "type": "unary",
    },
    "location": SourceRegion {
      "column": 2,
      "endColumn": 6,
      "endLine": 1,
      "extent": 4,
      "line": 1,
      "offset": 1,
      "source": "~~~~1",
    },
    "operator": "bit-complement",
    "type": "unary",
  },
  "location": SourceRegion {
    "column": 1,
    "endColumn": 6,
    "endLine": 1,
    "extent": 5,
    "line": 1,
    "offset": 0,
    "source": "~~~~1",
  },
  "operator": "bit-complement",
  "type": "unary",
}
`;

exports[`valid expressions > parses ~1 1`] = `
{
  "expression": {
    "location": SourceRegion {
      "column": 2,
      "endColumn": 3,
      "endLine": 1,
      "extent": 1,
      "line": 1,
      "offset": 1,
      "source": "~1",
    },
    "type": "value",
    "value": {
      "type": "constant",
      "value": {
        "type": "number",
        "value": "1",
      },
    },
  },
  "location": SourceRegion {
    "column": 1,
    "endColumn": 3,
    "endLine": 1,
    "extent": 2,
    "line": 1,
    "offset": 0,
    "source": "~1",
  },
  "operator": "bit-complement",
  "type": "unary",
}
`;

exports[`valid expressions > parses ---1 1`] = `
{
  "expression": {
    "expression": {
      "expression": {
        "location": SourceRegion {
          "column": 4,
          "endColumn": 5,
          "endLine": 1,
          "extent": 1,
          "line": 1,
          "offset": 3,
          "source": "---1",
        },
        "type": "value",
        "value": {
          "type": "constant",
          "value": {
            "type": "number",
            "value": "1",
          },
        },
      },
      "location": SourceRegion {
        "column": 3,
        "endColumn": 5,
        "endLine": 1,
        "extent": 2,
        "line": 1,
        "offset": 2,
        "source": "---1",
      },
      "operator": "negate",
      "type": "unary",
    },
    "location": SourceRegion {
      "column": 2,
      "endColumn": 5,
      "endLine": 1,
      "extent": 3,
      "line": 1,
      "offset": 1,
      "source": "---1",
    },
    "operator": "negate",
    "type": "unary",
  },
  "location": SourceRegion {
    "column": 1,
    "endColumn": 5,
    "endLine": 1,
    "extent": 4,
    "line": 1,
    "offset": 0,
    "source": "---1",
  },
  "operator": "negate",
  "type": "unary",
}
`;

exports[`valid expressions > parses -1 1`] = `
{
  "expression": {
    "location": SourceRegion {
      "column": 2,
      "endColumn": 3,
      "endLine": 1,
      "extent": 1,
      "line": 1,
      "offset": 1,
      "source": "-1",
    },
    "type": "value",
    "value": {
      "type": "constant",
      "value": {
        "type": "number",
        "value": "1",
      },
    },
  },
  "location": SourceRegion {
    "column": 1,
    "endColumn": 3,
    "endLine": 1,
    "extent": 2,
    "line": 1,
    "offset": 0,
    "source": "-1",
  },
  "operator": "negate",
  "type": "unary",
}
`;

exports[`valid expressions > parses -2 1`] = `
{
  "expression": {
    "location": SourceRegion {
      "column": 2,
      "endColumn": 3,
      "endLine": 1,
      "extent": 1,
      "line": 1,
      "offset": 1,
      "source": "-2",
    },
    "type": "value",
    "value": {
      "type": "constant",
      "value": {
        "type": "number",
        "value": "2",
      },
    },
  },
  "location": SourceRegion {
    "column": 1,
    "endColumn": 3,
    "endLine": 1,
    "extent": 2,
    "line": 1,
    "offset": 0,
    "source": "-2",
  },
  "operator": "negate",
  "type": "unary",
}
`;

exports[`valid expressions > parses 1  in (1,) 1`] = `
{
  "left": {
    "location": SourceRegion {
      "column": 1,
      "endColumn": 2,
      "endLine": 1,
      "extent": 1,
      "line": 1,
      "offset": 0,
      "source": "1  in (1,)",
    },
    "type": "value",
    "value": {
      "type": "constant",
      "value": {
        "type": "number",
        "value": "1",
      },
    },
  },
  "location": SourceRegion {
    "column": 1,
    "endColumn": 11,
    "endLine": 1,
    "extent": 10,
    "line": 1,
    "offset": 0,
    "source": "1  in (1,)",
  },
  "operator": "in",
  "right": {
    "location": SourceRegion {
      "column": 7,
      "endColumn": 11,
      "endLine": 1,
      "extent": 4,
      "line": 1,
      "offset": 6,
      "source": "1  in (1,)",
    },
    "type": "value",
    "value": {
      "items": [
        {
          "location": SourceRegion {
            "column": 8,
            "endColumn": 9,
            "endLine": 1,
            "extent": 1,
            "line": 1,
            "offset": 7,
            "source": "1  in (1,)",
          },
          "type": "value",
          "value": {
            "type": "constant",
            "value": {
              "type": "number",
              "value": "1",
            },
          },
        },
      ],
      "type": "list",
    },
  },
  "type": "binary",
}
`;

exports[`valid expressions > parses 1 != 2 1`] = `
{
  "left": {
    "location": SourceRegion {
      "column": 1,
      "endColumn": 2,
      "endLine": 1,
      "extent": 1,
      "line": 1,
      "offset": 0,
      "source": "1 != 2",
    },
    "type": "value",
    "value": {
      "type": "constant",
      "value": {
        "type": "number",
        "value": "1",
      },
    },
  },
  "location": SourceRegion {
    "column": 1,
    "endColumn": 7,
    "endLine": 1,
    "extent": 6,
    "line": 1,
    "offset": 0,
    "source": "1 != 2",
  },
  "operator": "not-equals",
  "right": {
    "location": SourceRegion {
      "column": 6,
      "endColumn": 7,
      "endLine": 1,
      "extent": 1,
      "line": 1,
      "offset": 5,
      "source": "1 != 2",
    },
    "type": "value",
    "value": {
      "type": "constant",
      "value": {
        "type": "number",
        "value": "2",
      },
    },
  },
  "type": "binary",
}
`;

exports[`valid expressions > parses 1 % 2 1`] = `
{
  "left": {
    "location": SourceRegion {
      "column": 1,
      "endColumn": 2,
      "endLine": 1,
      "extent": 1,
      "line": 1,
      "offset": 0,
      "source": "1 % 2",
    },
    "type": "value",
    "value": {
      "type": "constant",
      "value": {
        "type": "number",
        "value": "1",
      },
    },
  },
  "location": SourceRegion {
    "column": 1,
    "endColumn": 6,
    "endLine": 1,
    "extent": 5,
    "line": 1,
    "offset": 0,
    "source": "1 % 2",
  },
  "operator": "modulus",
  "right": {
    "location": SourceRegion {
      "column": 5,
      "endColumn": 6,
      "endLine": 1,
      "extent": 1,
      "line": 1,
      "offset": 4,
      "source": "1 % 2",
    },
    "type": "value",
    "value": {
      "type": "constant",
      "value": {
        "type": "number",
        "value": "2",
      },
    },
  },
  "type": "binary",
}
`;

exports[`valid expressions > parses 1 & 2 1`] = `
{
  "left": {
    "location": SourceRegion {
      "column": 1,
      "endColumn": 2,
      "endLine": 1,
      "extent": 1,
      "line": 1,
      "offset": 0,
      "source": "1 & 2",
    },
    "type": "value",
    "value": {
      "type": "constant",
      "value": {
        "type": "number",
        "value": "1",
      },
    },
  },
  "location": SourceRegion {
    "column": 1,
    "endColumn": 6,
    "endLine": 1,
    "extent": 5,
    "line": 1,
    "offset": 0,
    "source": "1 & 2",
  },
  "operator": "bit-and",
  "right": {
    "location": SourceRegion {
      "column": 5,
      "endColumn": 6,
      "endLine": 1,
      "extent": 1,
      "line": 1,
      "offset": 4,
      "source": "1 & 2",
    },
    "type": "value",
    "value": {
      "type": "constant",
      "value": {
        "type": "number",
        "value": "2",
      },
    },
  },
  "type": "binary",
}
`;

exports[`valid expressions > parses 1 * 2 1`] = `
{
  "left": {
    "location": SourceRegion {
      "column": 1,
      "endColumn": 2,
      "endLine": 1,
      "extent": 1,
      "line": 1,
      "offset": 0,
      "source": "1 * 2",
    },
    "type": "value",
    "value": {
      "type": "constant",
      "value": {
        "type": "number",
        "value": "1",
      },
    },
  },
  "location": SourceRegion {
    "column": 1,
    "endColumn": 6,
    "endLine": 1,
    "extent": 5,
    "line": 1,
    "offset": 0,
    "source": "1 * 2",
  },
  "operator": "multiplication",
  "right": {
    "location": SourceRegion {
      "column": 5,
      "endColumn": 6,
      "endLine": 1,
      "extent": 1,
      "line": 1,
      "offset": 4,
      "source": "1 * 2",
    },
    "type": "value",
    "value": {
      "type": "constant",
      "value": {
        "type": "number",
        "value": "2",
      },
    },
  },
  "type": "binary",
}
`;

exports[`valid expressions > parses 1 * MyParam * {MyParam} * [MyParam] * (1,2) 1`] = `
{
  "left": {
    "left": {
      "left": {
        "left": {
          "location": SourceRegion {
            "column": 1,
            "endColumn": 2,
            "endLine": 1,
            "extent": 1,
            "line": 1,
            "offset": 0,
            "source": "1 * MyParam * {MyParam} * [MyParam] * (1,2)",
          },
          "type": "value",
          "value": {
            "type": "constant",
            "value": {
              "type": "number",
              "value": "1",
            },
          },
        },
        "location": SourceRegion {
          "column": 1,
          "endColumn": 12,
          "endLine": 1,
          "extent": 11,
          "line": 1,
          "offset": 0,
          "source": "1 * MyParam * {MyParam} * [MyParam] * (1,2)",
        },
        "operator": "multiplication",
        "right": {
          "location": SourceRegion {
            "column": 5,
            "endColumn": 12,
            "endLine": 1,
            "extent": 7,
            "line": 1,
            "offset": 4,
            "source": "1 * MyParam * {MyParam} * [MyParam] * (1,2)",
          },
          "type": "value",
          "value": {
            "name": "MyParam",
            "type": "parameter",
          },
        },
        "type": "binary",
      },
      "location": SourceRegion {
        "column": 1,
        "endColumn": 24,
        "endLine": 1,
        "extent": 23,
        "line": 1,
        "offset": 0,
        "source": "1 * MyParam * {MyParam} * [MyParam] * (1,2)",
      },
      "operator": "multiplication",
      "right": {
        "location": SourceRegion {
          "column": 15,
          "endColumn": 24,
          "endLine": 1,
          "extent": 9,
          "line": 1,
          "offset": 14,
          "source": "1 * MyParam * {MyParam} * [MyParam] * (1,2)",
        },
        "type": "value",
        "value": {
          "name": "MyParam",
          "type": "parameter",
        },
      },
      "type": "binary",
    },
    "location": SourceRegion {
      "column": 1,
      "endColumn": 36,
      "endLine": 1,
      "extent": 35,
      "line": 1,
      "offset": 0,
      "source": "1 * MyParam * {MyParam} * [MyParam] * (1,2)",
    },
    "operator": "multiplication",
    "right": {
      "location": SourceRegion {
        "column": 27,
        "endColumn": 36,
        "endLine": 1,
        "extent": 9,
        "line": 1,
        "offset": 26,
        "source": "1 * MyParam * {MyParam} * [MyParam] * (1,2)",
      },
      "type": "value",
      "value": {
        "name": "MyParam",
        "type": "parameter",
      },
    },
    "type": "binary",
  },
  "location": SourceRegion {
    "column": 1,
    "endColumn": 44,
    "endLine": 1,
    "extent": 43,
    "line": 1,
    "offset": 0,
    "source": "1 * MyParam * {MyParam} * [MyParam] * (1,2)",
  },
  "operator": "multiplication",
  "right": {
    "location": SourceRegion {
      "column": 39,
      "endColumn": 44,
      "endLine": 1,
      "extent": 5,
      "line": 1,
      "offset": 38,
      "source": "1 * MyParam * {MyParam} * [MyParam] * (1,2)",
    },
    "type": "value",
    "value": {
      "items": [
        {
          "location": SourceRegion {
            "column": 40,
            "endColumn": 41,
            "endLine": 1,
            "extent": 1,
            "line": 1,
            "offset": 39,
            "source": "1 * MyParam * {MyParam} * [MyParam] * (1,2)",
          },
          "type": "value",
          "value": {
            "type": "constant",
            "value": {
              "type": "number",
              "value": "1",
            },
          },
        },
        {
          "location": SourceRegion {
            "column": 42,
            "endColumn": 43,
            "endLine": 1,
            "extent": 1,
            "line": 1,
            "offset": 41,
            "source": "1 * MyParam * {MyParam} * [MyParam] * (1,2)",
          },
          "type": "value",
          "value": {
            "type": "constant",
            "value": {
              "type": "number",
              "value": "2",
            },
          },
        },
      ],
      "type": "list",
    },
  },
  "type": "binary",
}
`;

exports[`valid expressions > parses 1 ** 2 1`] = `
{
  "left": {
    "location": SourceRegion {
      "column": 1,
      "endColumn": 2,
      "endLine": 1,
      "extent": 1,
      "line": 1,
      "offset": 0,
      "source": "1 ** 2",
    },
    "type": "value",
    "value": {
      "type": "constant",
      "value": {
        "type": "number",
        "value": "1",
      },
    },
  },
  "location": SourceRegion {
    "column": 1,
    "endColumn": 7,
    "endLine": 1,
    "extent": 6,
    "line": 1,
    "offset": 0,
    "source": "1 ** 2",
  },
  "operator": "exponentiation",
  "right": {
    "location": SourceRegion {
      "column": 6,
      "endColumn": 7,
      "endLine": 1,
      "extent": 1,
      "line": 1,
      "offset": 5,
      "source": "1 ** 2",
    },
    "type": "value",
    "value": {
      "type": "constant",
      "value": {
        "type": "number",
        "value": "2",
      },
    },
  },
  "type": "binary",
}
`;

exports[`valid expressions > parses 1 + 2 1`] = `
{
  "left": {
    "location": SourceRegion {
      "column": 1,
      "endColumn": 2,
      "endLine": 1,
      "extent": 1,
      "line": 1,
      "offset": 0,
      "source": "1 + 2",
    },
    "type": "value",
    "value": {
      "type": "constant",
      "value": {
        "type": "number",
        "value": "1",
      },
    },
  },
  "location": SourceRegion {
    "column": 1,
    "endColumn": 6,
    "endLine": 1,
    "extent": 5,
    "line": 1,
    "offset": 0,
    "source": "1 + 2",
  },
  "operator": "addition",
  "right": {
    "location": SourceRegion {
      "column": 5,
      "endColumn": 6,
      "endLine": 1,
      "extent": 1,
      "line": 1,
      "offset": 4,
      "source": "1 + 2",
    },
    "type": "value",
    "value": {
      "type": "constant",
      "value": {
        "type": "number",
        "value": "2",
      },
    },
  },
  "type": "binary",
}
`;

exports[`valid expressions > parses 1 / 2 1`] = `
{
  "left": {
    "location": SourceRegion {
      "column": 1,
      "endColumn": 2,
      "endLine": 1,
      "extent": 1,
      "line": 1,
      "offset": 0,
      "source": "1 / 2",
    },
    "type": "value",
    "value": {
      "type": "constant",
      "value": {
        "type": "number",
        "value": "1",
      },
    },
  },
  "location": SourceRegion {
    "column": 1,
    "endColumn": 6,
    "endLine": 1,
    "extent": 5,
    "line": 1,
    "offset": 0,
    "source": "1 / 2",
  },
  "operator": "division",
  "right": {
    "location": SourceRegion {
      "column": 5,
      "endColumn": 6,
      "endLine": 1,
      "extent": 1,
      "line": 1,
      "offset": 4,
      "source": "1 / 2",
    },
    "type": "value",
    "value": {
      "type": "constant",
      "value": {
        "type": "number",
        "value": "2",
      },
    },
  },
  "type": "binary",
}
`;

exports[`valid expressions > parses 1 < 2 1`] = `
{
  "left": {
    "location": SourceRegion {
      "column": 1,
      "endColumn": 2,
      "endLine": 1,
      "extent": 1,
      "line": 1,
      "offset": 0,
      "source": "1 < 2",
    },
    "type": "value",
    "value": {
      "type": "constant",
      "value": {
        "type": "number",
        "value": "1",
      },
    },
  },
  "location": SourceRegion {
    "column": 1,
    "endColumn": 6,
    "endLine": 1,
    "extent": 5,
    "line": 1,
    "offset": 0,
    "source": "1 < 2",
  },
  "operator": "less-than",
  "right": {
    "location": SourceRegion {
      "column": 5,
      "endColumn": 6,
      "endLine": 1,
      "extent": 1,
      "line": 1,
      "offset": 4,
      "source": "1 < 2",
    },
    "type": "value",
    "value": {
      "type": "constant",
      "value": {
        "type": "number",
        "value": "2",
      },
    },
  },
  "type": "binary",
}
`;

exports[`valid expressions > parses 1 << 2 1`] = `
{
  "left": {
    "location": SourceRegion {
      "column": 1,
      "endColumn": 2,
      "endLine": 1,
      "extent": 1,
      "line": 1,
      "offset": 0,
      "source": "1 << 2",
    },
    "type": "value",
    "value": {
      "type": "constant",
      "value": {
        "type": "number",
        "value": "1",
      },
    },
  },
  "location": SourceRegion {
    "column": 1,
    "endColumn": 7,
    "endLine": 1,
    "extent": 6,
    "line": 1,
    "offset": 0,
    "source": "1 << 2",
  },
  "operator": "bit-left-shift",
  "right": {
    "location": SourceRegion {
      "column": 6,
      "endColumn": 7,
      "endLine": 1,
      "extent": 1,
      "line": 1,
      "offset": 5,
      "source": "1 << 2",
    },
    "type": "value",
    "value": {
      "type": "constant",
      "value": {
        "type": "number",
        "value": "2",
      },
    },
  },
  "type": "binary",
}
`;

exports[`valid expressions > parses 1 <= 2 1`] = `
{
  "left": {
    "location": SourceRegion {
      "column": 1,
      "endColumn": 2,
      "endLine": 1,
      "extent": 1,
      "line": 1,
      "offset": 0,
      "source": "1 <= 2",
    },
    "type": "value",
    "value": {
      "type": "constant",
      "value": {
        "type": "number",
        "value": "1",
      },
    },
  },
  "location": SourceRegion {
    "column": 1,
    "endColumn": 7,
    "endLine": 1,
    "extent": 6,
    "line": 1,
    "offset": 0,
    "source": "1 <= 2",
  },
  "operator": "less-than-equal",
  "right": {
    "location": SourceRegion {
      "column": 6,
      "endColumn": 7,
      "endLine": 1,
      "extent": 1,
      "line": 1,
      "offset": 5,
      "source": "1 <= 2",
    },
    "type": "value",
    "value": {
      "type": "constant",
      "value": {
        "type": "number",
        "value": "2",
      },
    },
  },
  "type": "binary",
}
`;

exports[`valid expressions > parses 1 <> 2 1`] = `
{
  "left": {
    "location": SourceRegion {
      "column": 1,
      "endColumn": 2,
      "endLine": 1,
      "extent": 1,
      "line": 1,
      "offset": 0,
      "source": "1 <> 2",
    },
    "type": "value",
    "value": {
      "type": "constant",
      "value": {
        "type": "number",
        "value": "1",
      },
    },
  },
  "location": SourceRegion {
    "column": 1,
    "endColumn": 7,
    "endLine": 1,
    "extent": 6,
    "line": 1,
    "offset": 0,
    "source": "1 <> 2",
  },
  "operator": "not-equals",
  "right": {
    "location": SourceRegion {
      "column": 6,
      "endColumn": 7,
      "endLine": 1,
      "extent": 1,
      "line": 1,
      "offset": 5,
      "source": "1 <> 2",
    },
    "type": "value",
    "value": {
      "type": "constant",
      "value": {
        "type": "number",
        "value": "2",
      },
    },
  },
  "type": "binary",
}
`;

exports[`valid expressions > parses 1 = 2 1`] = `
{
  "left": {
    "location": SourceRegion {
      "column": 1,
      "endColumn": 2,
      "endLine": 1,
      "extent": 1,
      "line": 1,
      "offset": 0,
      "source": "1 = 2",
    },
    "type": "value",
    "value": {
      "type": "constant",
      "value": {
        "type": "number",
        "value": "1",
      },
    },
  },
  "location": SourceRegion {
    "column": 1,
    "endColumn": 6,
    "endLine": 1,
    "extent": 5,
    "line": 1,
    "offset": 0,
    "source": "1 = 2",
  },
  "operator": "equals",
  "right": {
    "location": SourceRegion {
      "column": 5,
      "endColumn": 6,
      "endLine": 1,
      "extent": 1,
      "line": 1,
      "offset": 4,
      "source": "1 = 2",
    },
    "type": "value",
    "value": {
      "type": "constant",
      "value": {
        "type": "number",
        "value": "2",
      },
    },
  },
  "type": "binary",
}
`;

exports[`valid expressions > parses 1 > 2 1`] = `
{
  "left": {
    "location": SourceRegion {
      "column": 1,
      "endColumn": 2,
      "endLine": 1,
      "extent": 1,
      "line": 1,
      "offset": 0,
      "source": "1 > 2",
    },
    "type": "value",
    "value": {
      "type": "constant",
      "value": {
        "type": "number",
        "value": "1",
      },
    },
  },
  "location": SourceRegion {
    "column": 1,
    "endColumn": 6,
    "endLine": 1,
    "extent": 5,
    "line": 1,
    "offset": 0,
    "source": "1 > 2",
  },
  "operator": "greater-than",
  "right": {
    "location": SourceRegion {
      "column": 5,
      "endColumn": 6,
      "endLine": 1,
      "extent": 1,
      "line": 1,
      "offset": 4,
      "source": "1 > 2",
    },
    "type": "value",
    "value": {
      "type": "constant",
      "value": {
        "type": "number",
        "value": "2",
      },
    },
  },
  "type": "binary",
}
`;

exports[`valid expressions > parses 1 >= 2 1`] = `
{
  "left": {
    "location": SourceRegion {
      "column": 1,
      "endColumn": 2,
      "endLine": 1,
      "extent": 1,
      "line": 1,
      "offset": 0,
      "source": "1 >= 2",
    },
    "type": "value",
    "value": {
      "type": "constant",
      "value": {
        "type": "number",
        "value": "1",
      },
    },
  },
  "location": SourceRegion {
    "column": 1,
    "endColumn": 7,
    "endLine": 1,
    "extent": 6,
    "line": 1,
    "offset": 0,
    "source": "1 >= 2",
  },
  "operator": "greater-than-equal",
  "right": {
    "location": SourceRegion {
      "column": 6,
      "endColumn": 7,
      "endLine": 1,
      "extent": 1,
      "line": 1,
      "offset": 5,
      "source": "1 >= 2",
    },
    "type": "value",
    "value": {
      "type": "constant",
      "value": {
        "type": "number",
        "value": "2",
      },
    },
  },
  "type": "binary",
}
`;

exports[`valid expressions > parses 1 >> 2 1`] = `
{
  "left": {
    "location": SourceRegion {
      "column": 1,
      "endColumn": 2,
      "endLine": 1,
      "extent": 1,
      "line": 1,
      "offset": 0,
      "source": "1 >> 2",
    },
    "type": "value",
    "value": {
      "type": "constant",
      "value": {
        "type": "number",
        "value": "1",
      },
    },
  },
  "location": SourceRegion {
    "column": 1,
    "endColumn": 7,
    "endLine": 1,
    "extent": 6,
    "line": 1,
    "offset": 0,
    "source": "1 >> 2",
  },
  "operator": "bit-right-shift",
  "right": {
    "location": SourceRegion {
      "column": 6,
      "endColumn": 7,
      "endLine": 1,
      "extent": 1,
      "line": 1,
      "offset": 5,
      "source": "1 >> 2",
    },
    "type": "value",
    "value": {
      "type": "constant",
      "value": {
        "type": "number",
        "value": "2",
      },
    },
  },
  "type": "binary",
}
`;

exports[`valid expressions > parses 1 ^ 2 1`] = `
{
  "left": {
    "location": SourceRegion {
      "column": 1,
      "endColumn": 2,
      "endLine": 1,
      "extent": 1,
      "line": 1,
      "offset": 0,
      "source": "1 ^ 2",
    },
    "type": "value",
    "value": {
      "type": "constant",
      "value": {
        "type": "number",
        "value": "1",
      },
    },
  },
  "location": SourceRegion {
    "column": 1,
    "endColumn": 6,
    "endLine": 1,
    "extent": 5,
    "line": 1,
    "offset": 0,
    "source": "1 ^ 2",
  },
  "operator": "bit-xor",
  "right": {
    "location": SourceRegion {
      "column": 5,
      "endColumn": 6,
      "endLine": 1,
      "extent": 1,
      "line": 1,
      "offset": 4,
      "source": "1 ^ 2",
    },
    "type": "value",
    "value": {
      "type": "constant",
      "value": {
        "type": "number",
        "value": "2",
      },
    },
  },
  "type": "binary",
}
`;

exports[`valid expressions > parses 1 | 2 1`] = `
{
  "left": {
    "location": SourceRegion {
      "column": 1,
      "endColumn": 2,
      "endLine": 1,
      "extent": 1,
      "line": 1,
      "offset": 0,
      "source": "1 | 2",
    },
    "type": "value",
    "value": {
      "type": "constant",
      "value": {
        "type": "number",
        "value": "1",
      },
    },
  },
  "location": SourceRegion {
    "column": 1,
    "endColumn": 6,
    "endLine": 1,
    "extent": 5,
    "line": 1,
    "offset": 0,
    "source": "1 | 2",
  },
  "operator": "bit-or",
  "right": {
    "location": SourceRegion {
      "column": 5,
      "endColumn": 6,
      "endLine": 1,
      "extent": 1,
      "line": 1,
      "offset": 4,
      "source": "1 | 2",
    },
    "type": "value",
    "value": {
      "type": "constant",
      "value": {
        "type": "number",
        "value": "2",
      },
    },
  },
  "type": "binary",
}
`;

exports[`valid expressions > parses 1 - 2 1`] = `
{
  "left": {
    "location": SourceRegion {
      "column": 1,
      "endColumn": 2,
      "endLine": 1,
      "extent": 1,
      "line": 1,
      "offset": 0,
      "source": "1 - 2",
    },
    "type": "value",
    "value": {
      "type": "constant",
      "value": {
        "type": "number",
        "value": "1",
      },
    },
  },
  "location": SourceRegion {
    "column": 1,
    "endColumn": 6,
    "endLine": 1,
    "extent": 5,
    "line": 1,
    "offset": 0,
    "source": "1 - 2",
  },
  "operator": "subtraction",
  "right": {
    "location": SourceRegion {
      "column": 5,
      "endColumn": 6,
      "endLine": 1,
      "extent": 1,
      "line": 1,
      "offset": 4,
      "source": "1 - 2",
    },
    "type": "value",
    "value": {
      "type": "constant",
      "value": {
        "type": "number",
        "value": "2",
      },
    },
  },
  "type": "binary",
}
`;

exports[`valid expressions > parses 1 not in (1,) 1`] = `
{
  "left": {
    "location": SourceRegion {
      "column": 1,
      "endColumn": 2,
      "endLine": 1,
      "extent": 1,
      "line": 1,
      "offset": 0,
      "source": "1 not in (1,)",
    },
    "type": "value",
    "value": {
      "type": "constant",
      "value": {
        "type": "number",
        "value": "1",
      },
    },
  },
  "location": SourceRegion {
    "column": 1,
    "endColumn": 14,
    "endLine": 1,
    "extent": 13,
    "line": 1,
    "offset": 0,
    "source": "1 not in (1,)",
  },
  "operator": "not-in",
  "right": {
    "location": SourceRegion {
      "column": 10,
      "endColumn": 14,
      "endLine": 1,
      "extent": 4,
      "line": 1,
      "offset": 9,
      "source": "1 not in (1,)",
    },
    "type": "value",
    "value": {
      "items": [
        {
          "location": SourceRegion {
            "column": 11,
            "endColumn": 12,
            "endLine": 1,
            "extent": 1,
            "line": 1,
            "offset": 10,
            "source": "1 not in (1,)",
          },
          "type": "value",
          "value": {
            "type": "constant",
            "value": {
              "type": "number",
              "value": "1",
            },
          },
        },
      ],
      "type": "list",
    },
  },
  "type": "binary",
}
`;

exports[`valid expressions > parses 1+2 1`] = `
{
  "left": {
    "location": SourceRegion {
      "column": 1,
      "endColumn": 2,
      "endLine": 1,
      "extent": 1,
      "line": 1,
      "offset": 0,
      "source": "1+2",
    },
    "type": "value",
    "value": {
      "type": "constant",
      "value": {
        "type": "number",
        "value": "1",
      },
    },
  },
  "location": SourceRegion {
    "column": 1,
    "endColumn": 4,
    "endLine": 1,
    "extent": 3,
    "line": 1,
    "offset": 0,
    "source": "1+2",
  },
  "operator": "addition",
  "right": {
    "location": SourceRegion {
      "column": 3,
      "endColumn": 4,
      "endLine": 1,
      "extent": 1,
      "line": 1,
      "offset": 2,
      "source": "1+2",
    },
    "type": "value",
    "value": {
      "type": "constant",
      "value": {
        "type": "number",
        "value": "2",
      },
    },
  },
  "type": "binary",
}
`;

exports[`valid expressions > parses Fun() 1`] = `
{
  "arguments": [],
  "location": SourceRegion {
    "column": 1,
    "endColumn": 6,
    "endLine": 1,
    "extent": 5,
    "line": 1,
    "offset": 0,
    "source": "Fun()",
  },
  "name": "Fun",
  "type": "function",
}
`;

exports[`valid expressions > parses MyFunction(1,2) 1`] = `
{
  "arguments": [
    {
      "location": SourceRegion {
        "column": 12,
        "endColumn": 13,
        "endLine": 1,
        "extent": 1,
        "line": 1,
        "offset": 11,
        "source": "MyFunction(1,2)",
      },
      "type": "value",
      "value": {
        "type": "constant",
        "value": {
          "type": "number",
          "value": "1",
        },
      },
    },
    {
      "location": SourceRegion {
        "column": 14,
        "endColumn": 15,
        "endLine": 1,
        "extent": 1,
        "line": 1,
        "offset": 13,
        "source": "MyFunction(1,2)",
      },
      "type": "value",
      "value": {
        "type": "constant",
        "value": {
          "type": "number",
          "value": "2",
        },
      },
    },
  ],
  "location": SourceRegion {
    "column": 1,
    "endColumn": 16,
    "endLine": 1,
    "extent": 15,
    "line": 1,
    "offset": 0,
    "source": "MyFunction(1,2)",
  },
  "name": "MyFunction",
  "type": "function",
}
`;

exports[`valid expressions > parses MyFunctionName(1,2,false) 1`] = `
{
  "arguments": [
    {
      "location": SourceRegion {
        "column": 16,
        "endColumn": 17,
        "endLine": 1,
        "extent": 1,
        "line": 1,
        "offset": 15,
        "source": "MyFunctionName(1,2,false)",
      },
      "type": "value",
      "value": {
        "type": "constant",
        "value": {
          "type": "number",
          "value": "1",
        },
      },
    },
    {
      "location": SourceRegion {
        "column": 18,
        "endColumn": 19,
        "endLine": 1,
        "extent": 1,
        "line": 1,
        "offset": 17,
        "source": "MyFunctionName(1,2,false)",
      },
      "type": "value",
      "value": {
        "type": "constant",
        "value": {
          "type": "number",
          "value": "2",
        },
      },
    },
    {
      "location": SourceRegion {
        "column": 20,
        "endColumn": 25,
        "endLine": 1,
        "extent": 5,
        "line": 1,
        "offset": 19,
        "source": "MyFunctionName(1,2,false)",
      },
      "type": "value",
      "value": {
        "type": "constant",
        "value": {
          "type": "boolean",
          "value": "false",
        },
      },
    },
  ],
  "location": SourceRegion {
    "column": 1,
    "endColumn": 26,
    "endLine": 1,
    "extent": 25,
    "line": 1,
    "offset": 0,
    "source": "MyFunctionName(1,2,false)",
  },
  "name": "MyFunctionName",
  "type": "function",
}
`;

exports[`valid expressions > parses false?1:2 1`] = `
{
  "left": {
    "location": SourceRegion {
      "column": 1,
      "endColumn": 6,
      "endLine": 1,
      "extent": 5,
      "line": 1,
      "offset": 0,
      "source": "false?1:2",
    },
    "type": "value",
    "value": {
      "type": "constant",
      "value": {
        "type": "boolean",
        "value": "false",
      },
    },
  },
  "location": SourceRegion {
    "column": 1,
    "endColumn": 10,
    "endLine": 1,
    "extent": 9,
    "line": 1,
    "offset": 0,
    "source": "false?1:2",
  },
  "middle": {
    "location": SourceRegion {
      "column": 7,
      "endColumn": 8,
      "endLine": 1,
      "extent": 1,
      "line": 1,
      "offset": 6,
      "source": "false?1:2",
    },
    "type": "value",
    "value": {
      "type": "constant",
      "value": {
        "type": "number",
        "value": "1",
      },
    },
  },
  "right": {
    "location": SourceRegion {
      "column": 9,
      "endColumn": 10,
      "endLine": 1,
      "extent": 1,
      "line": 1,
      "offset": 8,
      "source": "false?1:2",
    },
    "type": "value",
    "value": {
      "type": "constant",
      "value": {
        "type": "number",
        "value": "2",
      },
    },
  },
  "type": "ternary",
}
`;

exports[`valid expressions > parses true && false 1`] = `
{
  "left": {
    "location": SourceRegion {
      "column": 1,
      "endColumn": 5,
      "endLine": 1,
      "extent": 4,
      "line": 1,
      "offset": 0,
      "source": "true && false",
    },
    "type": "value",
    "value": {
      "type": "constant",
      "value": {
        "type": "boolean",
        "value": "true",
      },
    },
  },
  "location": SourceRegion {
    "column": 1,
    "endColumn": 14,
    "endLine": 1,
    "extent": 13,
    "line": 1,
    "offset": 0,
    "source": "true && false",
  },
  "operator": "and",
  "right": {
    "location": SourceRegion {
      "column": 9,
      "endColumn": 14,
      "endLine": 1,
      "extent": 5,
      "line": 1,
      "offset": 8,
      "source": "true && false",
    },
    "type": "value",
    "value": {
      "type": "constant",
      "value": {
        "type": "boolean",
        "value": "false",
      },
    },
  },
  "type": "binary",
}
`;

exports[`valid expressions > parses true || false 1`] = `
{
  "left": {
    "location": SourceRegion {
      "column": 1,
      "endColumn": 5,
      "endLine": 1,
      "extent": 4,
      "line": 1,
      "offset": 0,
      "source": "true || false",
    },
    "type": "value",
    "value": {
      "type": "constant",
      "value": {
        "type": "boolean",
        "value": "true",
      },
    },
  },
  "location": SourceRegion {
    "column": 1,
    "endColumn": 14,
    "endLine": 1,
    "extent": 13,
    "line": 1,
    "offset": 0,
    "source": "true || false",
  },
  "operator": "or",
  "right": {
    "location": SourceRegion {
      "column": 9,
      "endColumn": 14,
      "endLine": 1,
      "extent": 5,
      "line": 1,
      "offset": 8,
      "source": "true || false",
    },
    "type": "value",
    "value": {
      "type": "constant",
      "value": {
        "type": "boolean",
        "value": "false",
      },
    },
  },
  "type": "binary",
}
`;

exports[`valid expressions > parses true and false 1`] = `
{
  "left": {
    "location": SourceRegion {
      "column": 1,
      "endColumn": 5,
      "endLine": 1,
      "extent": 4,
      "line": 1,
      "offset": 0,
      "source": "true and false",
    },
    "type": "value",
    "value": {
      "type": "constant",
      "value": {
        "type": "boolean",
        "value": "true",
      },
    },
  },
  "location": SourceRegion {
    "column": 1,
    "endColumn": 15,
    "endLine": 1,
    "extent": 14,
    "line": 1,
    "offset": 0,
    "source": "true and false",
  },
  "operator": "and",
  "right": {
    "location": SourceRegion {
      "column": 10,
      "endColumn": 15,
      "endLine": 1,
      "extent": 5,
      "line": 1,
      "offset": 9,
      "source": "true and false",
    },
    "type": "value",
    "value": {
      "type": "constant",
      "value": {
        "type": "boolean",
        "value": "false",
      },
    },
  },
  "type": "binary",
}
`;

exports[`valid expressions > parses true or false 1`] = `
{
  "left": {
    "location": SourceRegion {
      "column": 1,
      "endColumn": 5,
      "endLine": 1,
      "extent": 4,
      "line": 1,
      "offset": 0,
      "source": "true or false",
    },
    "type": "value",
    "value": {
      "type": "constant",
      "value": {
        "type": "boolean",
        "value": "true",
      },
    },
  },
  "location": SourceRegion {
    "column": 1,
    "endColumn": 14,
    "endLine": 1,
    "extent": 13,
    "line": 1,
    "offset": 0,
    "source": "true or false",
  },
  "operator": "or",
  "right": {
    "location": SourceRegion {
      "column": 9,
      "endColumn": 14,
      "endLine": 1,
      "extent": 5,
      "line": 1,
      "offset": 8,
      "source": "true or false",
    },
    "type": "value",
    "value": {
      "type": "constant",
      "value": {
        "type": "boolean",
        "value": "false",
      },
    },
  },
  "type": "binary",
}
`;

exports[`valid expressions > parses x like y 1`] = `
{
  "left": {
    "location": SourceRegion {
      "column": 1,
      "endColumn": 2,
      "endLine": 1,
      "extent": 1,
      "line": 1,
      "offset": 0,
      "source": "x like y",
    },
    "type": "value",
    "value": {
      "name": "x",
      "type": "parameter",
    },
  },
  "location": SourceRegion {
    "column": 1,
    "endColumn": 9,
    "endLine": 1,
    "extent": 8,
    "line": 1,
    "offset": 0,
    "source": "x like y",
  },
  "operator": "like",
  "right": {
    "location": SourceRegion {
      "column": 8,
      "endColumn": 9,
      "endLine": 1,
      "extent": 1,
      "line": 1,
      "offset": 7,
      "source": "x like y",
    },
    "type": "value",
    "value": {
      "name": "y",
      "type": "parameter",
    },
  },
  "type": "binary",
}
`;

exports[`valid expressions > parses x not like y 1`] = `
{
  "left": {
    "location": SourceRegion {
      "column": 1,
      "endColumn": 2,
      "endLine": 1,
      "extent": 1,
      "line": 1,
      "offset": 0,
      "source": "x not like y",
    },
    "type": "value",
    "value": {
      "name": "x",
      "type": "parameter",
    },
  },
  "location": SourceRegion {
    "column": 1,
    "endColumn": 13,
    "endLine": 1,
    "extent": 12,
    "line": 1,
    "offset": 0,
    "source": "x not like y",
  },
  "operator": "not-like",
  "right": {
    "location": SourceRegion {
      "column": 12,
      "endColumn": 13,
      "endLine": 1,
      "extent": 1,
      "line": 1,
      "offset": 11,
      "source": "x not like y",
    },
    "type": "value",
    "value": {
      "name": "y",
      "type": "parameter",
    },
  },
  "type": "binary",
}
`;
